# nautobot-kafka-app

./: LICENSE  README.md  pyproject.toml
nautobot_kafka_app/: __init__.py  constants.py  filters.py  forms.py  jobs.py  models.py  navigation.py  tables.py  template_content.py  urls.py  views.py
nautobot_kafka_app/api/: serializers.py  urls.py  views.py
nautobot_kafka_app/kafka/: consumers.py  events.py  producers.py  pydantic_models.py
nautobot_kafka_app/migrations/: 0001_initial.py
nautobot_kafka_app/templates/nautobot_kafka_app/: template.html
nautobot_kafka_app/tests/: payloads.py  test_pydantic_models.py
